--- a/web-boilerplate/.env
+++ b/web-boilerplate/.env
@@ -2,8 +2,8 @@ WEB_HOST="localhost"
 WEB_PORT="2121"
 # Web server endpoints
 WEB_URL="http://localhost:2121"
-HTTP_GRAPHQL_URL="http://localhost:2121/graphql"
-WS_GRAPHQL_URL="ws://localhost:2121/socket"
+HTTP_GRAPHQL_URL="http://localhost:2222"
+WS_GRAPHQL_URL="ws://localhost:2222/socket"
  # url for the graphql server
 GRAPHQL_SERVER_URL="http://localhost:2222"
  # url for the webpack-dev-server
