--- a/web-boilerplate/package.json
+++ b/web-boilerplate/package.json
@@ -14,9 +14,10 @@
     "build:client:prod": "cross-env NODE_ENV=prod webpack --config webpack/webpack.client.js --progress",
     "build:web": "cross-env NODE_ENV=dev webpack --config webpack/webpack.server.js --progress",
     "build:web:prod": "cross-env NODE_ENV=prod webpack --config webpack/webpack.server.js --progress",
-    "types": "node_modules/.bin/gql-gen --schema http://localhost:2222/ --template graphql-codegen-typescript-template --out ./graphql-typings.d.ts src/**/*.{ts,tsx}"
+    "types": "node_modules/.bin/gql-gen --schema http://localhost:2222/ --template graphql-codegen-typescript-template --out ./graphql-typings.d.ts 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@casl/ability": "^2.4.2",
     "@fortawesome/fontawesome": "^1.1.4",
     "@playlyfe/gql": "^2.6.0",
     "@types/express": "^4.11.1",
@@ -45,6 +46,7 @@
     "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.8",
     "apollo-server": "^2.0.0-rc.5",
+    "browser-env": "^3.2.5",
     "classnames": "2.2.5",
     "copy-webpack-plugin": "4.2.3",
     "cross-env": "5.1.1",
@@ -96,6 +98,7 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
+    "serve-favicon": "^2.5.0",
     "style-loader": "0.18.2",
     "ts-loader": "3.5.0",
     "typescript": "2.9.1",
